--- a/app/views/sale_natures/_form.html.haml
+++ b/app/views/sale_natures/_form.html.haml
@@ -14,7 +14,7 @@
 
 =field_set(:downpayment) do
   -input :downpayment_minimum
-  -input :downpayment_rate
+  -input :downpayment_percentage
 
 =field_set(:accountancy) do
   -association :journal, :new => {:nature => 'sales'}
