--- a/app/views/sale_natures/show.html.haml
+++ b/app/views/sale_natures/show.html.haml
@@ -9,7 +9,7 @@
   -l.attribute :downpayment
   -if @sale_nature.downpayment?
     -l.attribute :downpayment_minimum
-    -l.attribute :downpayment_rate
+    -l.attribute :downpayment_percentage
   -l.attribute :with_accounting
   -if @sale_nature.with_accounting?
     -l.attribute :journal
