--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -2,7 +2,7 @@
   -input :last_name
   -input :first_name
   -input :language, :choices => :languages
-  -input :username
+  -input :user_name
   -input :password
   -input :password_confirmation
   -input :admin, :hide => :rights
