--- a/app/views/accounts/load.html.haml
+++ b/app/views/accounts/load.html.haml
@@ -1,6 +1,6 @@
 =form_tag({}, :class=>"flex") do
   =field_set do
-    =field(tl(:accounts_to_load), select_tag("list", options_for_select(Account.lists.collect{|k,v| [v, k]}.sort)))
+    =field(tl(:accounts_to_load), select_tag("chart", options_for_select(Account.charts.collect{|c| [Account.human_chart_name(c), c]}.sort)))
 
     -#for setting in [:unset_reconcilable_old_third_accounts, :set_reconcilable_new_but_existing_third_accounts]
       =field tl(setting), check_box_tag(setting, "1", params[setting])
