--- a/app/views/sale_lines/_detail_row_form.html.haml
+++ b/app/views/sale_lines/_detail_row_form.html.haml
@@ -3,7 +3,7 @@
     %tr
       %td=SaleLine.human_attribute_name("quantity")
       -if @current_user.can?(:give_discounts_on_sales) and product.reduction_submissive?
-        %td=SaleLine.human_attribute_name("reduction_percent")
+        %td=SaleLine.human_attribute_name("reduction_percentage")
       -if product.stockable
         %td=SaleLine.human_attribute_name("stock")
     %tr
@@ -11,7 +11,7 @@
         =text_field(:sale_line, :quantity, :size=>5)
         =product.unit.label
       -if @current_user.can?(:give_discounts_on_sales) and product.reduction_submissive?
-        %td=text_field(:sale_line, :reduction_percent, :size=>5)
+        %td=text_field(:sale_line, :reduction_percentage, :size=>5)
       -if product.stockable
         %td=select(:sale_line, :stock_id, product_stocks_options(product))
   -if product.nature == "subscrip"
