--- a/app/views/journals/show.html.haml
+++ b/app/views/journals/show.html.haml
@@ -9,7 +9,7 @@
 =attributes_list(@journal) do |l|
   -l.attribute :name
   -l.attribute :code
-  -l.attribute :nature_label
+  -l.attribute :nature
   -l.attribute :currency
   -l.attribute :closed_on
 
