--- a/app/views/stock_transfers/_form.html.haml
+++ b/app/views/stock_transfers/_form.html.haml
@@ -6,4 +6,4 @@
   -association :warehouse
   -association :second_warehouse
   -input :planned_on
-  -input :comment, :field => :text
+  -input :comment
