Fixes unactived JS field with nested association and fixes pie chart on large angle

--- a/app/themes/tekyla/stylesheets/screen.css.scss
+++ b/app/themes/tekyla/stylesheets/screen.css.scss
@@ -560,6 +560,7 @@ span.rad, label.radio {
 }
 
 .form-fields {
+  @include clearfix;
   @include respond-to(table) {
     @include columns(2);
   }
