--- a/app/views/animal_events/_treatment_fields.html.haml
+++ b/app/views/animal_events/_treatment_fields.html.haml
@@ -9,7 +9,7 @@
       =AnimalTreatment.human_attribute_name('quantity_unit')
     .controls
       =selector(:animal_treatment, :quantity_unit, {:controller=>"units", :action=>:unroll}, {:object => animal_treatment}, :id => 'animal_treatment-quantity_unit-input', :class => 'selector')
-      -for error in animal_treatment.errors['quantity_unit']
+      -for error in animal_treatment.errors['quantity_unit_id']
         %span.help-inline=error
       %span.btn-toolbar
         =link_to({:controller => :units, :action => :new}, 'data-new-item' => 'animal_treatment-quantity_unit-input', :class => 'btn btn-new') do
@@ -20,7 +20,7 @@
       =AnimalTreatment.human_attribute_name('drug')
     .controls
       =selector(:animal_treatment, :drug, {:controller=>"animal_drugs", :action=>:unroll}, {:object => animal_treatment}, :id => 'animal_treatment-drug-input', :class => 'selector')
-      -for error in animal_treatment.errors['drug']
+      -for error in animal_treatment.errors['drug_id']
         %span.help-inline=error
       %span.btn-toolbar
         =link_to({:controller => :animal_drugs, :action => :new}, 'data-new-item' => 'animal_treatment-drug-input', :class => 'btn btn-new') do
@@ -31,7 +31,7 @@
       =AnimalTreatment.human_attribute_name('prescription')
     .controls
       =selector(:animal_treatment, :prescription, {:controller=>"animal_prescriptions", :action=>:unroll}, {:object => animal_treatment}, :id => 'animal_treatment-prescription-input', :class => 'selector')
-      -for error in animal_treatment.errors['prescription']
+      -for error in animal_treatment.errors['prescription_id']
         %span.help-inline=error
       %span.btn-toolbar
         =link_to({:controller => :animal_prescriptions, :action => :new}, 'data-new-item' => 'animal_treatment-prescription-input', :class => 'btn btn-new') do
