--- a/app/views/entities/_mobile_fields.html.haml
+++ b/app/views/entities/_mobile_fields.html.haml
@@ -3,4 +3,4 @@
 .nested-fields
   =link_to_remove_association('labels.remove_mobile'.t, f, :class => 'nested-remove remove-mobile')
   =f.input(:canal, :as => :hidden, :wrapper_html => {:id => 'canal-field'})
-  =f.input(:coordinate, :as => :tel, :wrapper_html => {:id => 'coordinate-field'})
+  =f.input(:coordinate, :as => :tel, :label => I18n.translate("enumerize.entity_address.canal.mobile"), :wrapper_html => {:id => 'coordinate-field'})
