--- a/app/views/entities/_website_fields.html.haml
+++ b/app/views/entities/_website_fields.html.haml
@@ -3,4 +3,4 @@
 .nested-fields
   =link_to_remove_association('labels.remove_website'.t, f, :class => 'nested-remove remove-website')
   =f.input(:canal, :as => :hidden, :wrapper_html => {:id => 'canal-field'})
-  =f.input(:coordinate, :as => :url, :wrapper_html => {:id => 'coordinate-field'})
+  =f.input(:coordinate, :as => :url, :label => I18n.translate("enumerize.entity_address.canal.website"), :wrapper_html => {:id => 'coordinate-field'})
