--- a/app/themes/tekyla/stylesheets/screen.css.scss
+++ b/app/themes/tekyla/stylesheets/screen.css.scss
@@ -38,7 +38,7 @@ fieldset {
         @include inline-block;
         width: 12px;
         height: 12px;
-        @include right(margin, round(0.25*$fs-normal));
+        @include margin-right(round(0.25*$fs-normal));
       }
       &.show .icon { @include common-sprite(toggle-show) }
       &.show:hover .icon { @include common-sprite(toggle-show-hover) }
@@ -79,7 +79,7 @@ html {
           position: absolute;
           top: 0;
           right: 0;
-          @include right(margin, $default-gap);
+          @include margin-right($default-gap);
           margin-top: $default-gap;
           .group {
             @include button-group;
@@ -174,7 +174,7 @@ html {
   em { font-style: italic; }
   ul, ol {
     padding: 0;
-    @include left(padding, 1.3*$content-font-size);
+    @include padding-left(1.3*$content-font-size);
     margin: 0 0 $default-gap 0;
   }
   ul li { list-style-type: square; }
@@ -328,7 +328,7 @@ table.quick td { padding: 0px 4px; }
     @include float(left);
   }
   .message {
-    @include left(margin, $icon-size + $default-gap);
+    @include margin-left($icon-size + $default-gap);
     h3 {
       font-size: $fs-normal;
       font-weight: bold;
@@ -339,7 +339,7 @@ table.quick td { padding: 0px 4px; }
     }
     ul {
       padding: round($fs-normal/4);
-      @include left(padding, round(1.2*$fs-normal));
+      @include padding-left(round(1.2*$fs-normal));
       li { list-style-type: square; }
     }
   }
@@ -434,9 +434,10 @@ table.quick td { padding: 0px 4px; }
       width: 25%;
       @include float(left);
       line-height: 1.4*$fs-normal;
-      @include inline-block;
+      @include display(block);
+      @include ellipsis;
       white-space: nowrap;
-      @include right(margin, round($fs-normal/2));
+      @include margin-right(round($fs-normal/2));
       &.required {
         abbr {
           color: red;
@@ -459,6 +460,8 @@ table.quick td { padding: 0px 4px; }
   color:  rgb(237, 0, 78);
 }
 
+$controls-margin-left: round($label-width * 1.1);
+
 .control-group {
   margin: round($fs-normal/3) 0;
   padding: round($fs-normal/3) 0;
@@ -475,11 +478,10 @@ table.quick td { padding: 0px 4px; }
     }
   }
   .controls {
-    $margin-left: round($label-width * 1.1);
-    @include margin-left($margin-left);
-    width: 100% - $margin-left;
+    @include margin-left($controls-margin-left);
+    width: 100% - $controls-margin-left;
     input, select, textarea {
-      max-width: 100% - $margin-left;
+      max-width: 100% - $controls-margin-left;
     }
   }
 }
@@ -543,7 +545,7 @@ div.field.mono-choice .toolbar { margin: 0 8px; }
   &.aside {
     width: $menu-width;
     @include float(left);
-    @include right(padding, round($fs-normal/2));
+    @include padding-right(round($fs-normal/2));
   }
 }
 
@@ -701,7 +703,7 @@ html[dir="rtl"] .stepper td.step { background-position: left center; }
     height: $text-height;
     line-height: $text-height;
     cursor: pointer;
-    @include right(margin, round($fs-normal/4));
+    @include margin-right(round($fs-normal/4));
     padding: (($tabs-height - $text-height)/2 - $menu-border-width) 6px (($tabs-height - $text-height)/2);
     color: #000;
     text-shadow: 1px 1px 0 white;
@@ -749,7 +751,7 @@ ul#journals {
   border-bottom: $menu-border-width solid mix($desktop-background, #000, 70%);
   @include background(linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,0.05)));
   @extend .tabs;
-  @include left(padding, round($fs-normal/4));
+  @include padding-left(round($fs-normal/4));
   & > li {
     @extend .tab;
     &.current{ @include background($desktop-background); }
@@ -779,10 +781,10 @@ $tree-line: 1px dotted #AAA;
   }
   .item {
     padding: 2px;
-    @include left(padding, 16px);
+    @include padding-left(16px);
     td.ic {
       width: 16px;
-      @include right(padding, 4px);
+      @include padding-right(4px);
       .icon {
         height: 16px;
         width:16px;
@@ -795,7 +797,7 @@ $tree-line: 1px dotted #AAA;
 /*      border-bottom:1px dotted #79F; */
     }
     form { @include inline-block; }
-    .export { vertical-align: middle; width: 1em; @include right(padding, 2px);}
+    .export { vertical-align: middle; width: 1em; @include padding-right(2px);}
     .attribute { color: #888; font-style: italic; }
     td.delete {padding: 0 4px; width: 2em; }
     td.position { width: 15ex; }
@@ -804,8 +806,8 @@ $tree-line: 1px dotted #AAA;
 }
 
 .branches {
-  html[dir="ltr"] & { margin-left: 20px; border-left: $tree-line; }
-  html[dir="rtl"] & { margin-right: 20px; border-right: $tree-line; }
+  @include margin-left(20px);
+  @include border-left($tree-line);
 }
 
 
@@ -1453,6 +1455,22 @@ input[data-datepicker] {@include text-align(center)}
 .control-group.hidden {
   display: none;
 }
-.nested-remove {
-  @include float(right);
+.nested-fields {
+  position: relative;
+  .nested-remove {
+    @include float(right);
+    position: absolute;
+    @include right(0);
+    @include icons-sprite(destroy);
+    @include display(block);
+    width: 16px;
+    height: 16px;
+    @include hide-text();
+  }
+}
+.links {
+  margin-bottom: $fs-normal;
+  .nested-add {
+    @include margin-left($controls-margin-left);
+  }
 }
