--- a/app/views/entities/_form.html.haml
+++ b/app/views/entities/_form.html.haml
@@ -30,9 +30,9 @@
   =input :origin, :autocomplete => true
   =input :first_met_on
   =association :proposer
-  =association :responsible, :source => :employees, :after => :category
+  =association :responsible, :source => :employees
   =input :vat_submissive
-  =input :reflation_submissive
+  =input :reflation_submissive, :show => :reduction_percentage
   =input :reduction_percentage
   =input :authorized_payments_count
   =input :deliveries_conditions, :field => :text
@@ -74,5 +74,9 @@
   =nested_association(:websites) do
     =input :canal, :value => "website", :field => :hidden
     =input :coordinate, :field => :url, :label => "enumerize.entity_address.canal.website"
+
+=field_set :user, :granted_on => :manage_users do
+  =input :loggable
+  =input :user_name
 
 -#=render :partial => "contacts/coordinates_form"
